# opengl-figures-moving

./: README.md
opengl/: CMakeLists.txt  main.cpp  stb_image.h
opengl/glad/include/glad/: glad.h
opengl/glad/src/: glad.c
